# pollux-documentation

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python_build.yaml
ci/linux/: build_doc.sh
ci/windows/: build_doc.bat
source/: about_pollux_overview.rst  application_scenario.rst  application_visualization.rst  conf.py  glossary.rst  index.rst  index_about_pollux.rst  index_applications.rst  index_getting_started.rst  start_installation.rst  start_login.rst  start_main_page.rst  start_projects.rst
source/images/: scenario_power_supply.csv
