[tool.poetry]
name = "pollux-documentation"
version = "0.1.0"
description = "Documentation of the POLLUX Digital Twin"
authors = ["Ryvo Octaviano <ryvo.octaviano@tno.nl>"]
readme = "README.md"
packages = [{ include = "source" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
homepage = "https://www.tno.nl"
documentation = "https://readthedocs.org"
repository = "https://github.com/pollux-digital-twin/pollux-model"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.1.0"
sphinx_rtd_theme ="^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

